# compare-workflow-graphs

./: aiida-pythonjob-qe_to_universal.py  aiida-pythonjob-xing-example.py  aiida-wg-calcfunction-qe_to_universal.py  aiida-wg-pythonjob-qe-all_scf_to_universal.py  aiida-wg-pythonjob-qe-get_item_task_to_universal.py  aiida-wg-pythonjob-qe-map_to_universal.py  aiida-wg-pythonjob-qe-no-all_scf_to_universal.py  aiida-wg-pythonjob-qe-to_universal.py  aiida-wg-pythonjob-qe_to_universal.py  aiida-workgraph-pure-tasks-qe_to_universal.py  aiida-workgraph-qe_to_universal.py  calculate_funcs_workgraph_pythonjob.py  from_universal_funcs_pyiron.py  pyiron_base_qe_to_universal.py  pythonjob-simple-examples.py  to_universal_funcs_pyiron.py  to_universal_funcs_workgraph_calcfunctions.py  universal_qe_to_pyiron_base.py  wg-pythonjob_all_scf.html  wg-pythonjob_bare.html  wg-pythonjob_map.html  wg_dict.txt
atomistic-engine-unification/: pyproject.toml
atomistic-engine-unification/src/atomistic_engine_unification/: calculate_funcs_aiida_wg_pythonjob.py  calculate_funcs_pyiron.py  extract_universal_funcs_aiida_wg_pythonjob.py
jupyter/: aiida-workgraph_to_universal.ipynb  pyiron_base_qe_to_universal.ipynb  universal_qe_to_pyiron_base.ipynb
python_files/: jobflow_to_universal.py  pyiron_base_to_universal.py  pyiron_workflow_to_universal.py  universal_to_aiida.py  universal_to_jobflow.py  universal_to_pyiron_base.py  universal_to_pyiron_workflow.py  workgraph-dev.py
python_files/universal_functions/: __init__.py
