[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomistic_engine_unification"
version = "0.0.1"
description = "Common functions for world domination"
authors = [
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Janine George", email = "janine.geogre@bam.de" },
  { name = "Marnik Bercx", email = "marnik.bercx@psi.ch" },
  { name = "Christina Ertural", email = "christina.ertural@bam.de" },
  { name = "Joerg Schaarschmidt", email = "joerg.schaarschmidt@kit.edu" },
  { name = "Sam Dareska" },
  { name = "Leopold Talirz", email = "leopold.talirz@gmail.com" },
  { name = "Julian Geiger", email = "julian.geiger@psi.ch" },
]
license = { text = "MIT" }
dependencies = ["ipdb", "ase", "aiida-core", "aiida-workgraph"]
